# rust-stm32-shutter-automation

./: Cargo.toml  README.md  openocd.cfg
.cargo/: config
reductor-small/: README.md  planetary_shutter.FCStd  planetary_shutter_body_bottom.stl  planetary_shutter_body_top.stl  planetary_shutter_carrier.stl  planetary_shutter_planet.stl  planetary_shutter_ring.stl  planetary_shutter_roller.stl  planetary_shutter_sun.stl
src/: command.rs  controller.rs  help.txt  main.rs  string.rs
